# db_course_work

./: .gitignore  autoapp.py  pyproject.toml
backend/: app.py  database.py  main.py
backend/cruds/: activity.py  finance.py  location.py  product.py  shopping_list.py  user.py
backend/models/: __init__.py
backend/routers/: activities.py  auth.py  dependencies.py  finances.py  locations.py  me.py  products.py  shopping_lists.py  users.py
backend/schemas/: __init__.py  activities.py  credentials.py  finance.py  location.py  products.py  shopping_lists.py  users.py
backend/utils/: schedule.py
